{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 89,
  "lineage": "537e1ef4-3faa-8975-d6e9-f183154db435",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-12-26T12:40:11.157-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/database-security-445803/global/firewalls/allow-external",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "allow-external",
            "network": "https://www.googleapis.com/compute/v1/projects/database-security-445803/global/networks/db-security-vpc",
            "priority": 0,
            "project": "database-security-445803",
            "self_link": "https://www.googleapis.com/compute/v1/projects/database-security-445803/global/firewalls/allow-external",
            "source_ranges": [
              "108.91.40.74/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-12-26T12:40:11.321-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/database-security-445803/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/database-security-445803/global/networks/db-security-vpc",
            "priority": 1000,
            "project": "database-security-445803",
            "self_link": "https://www.googleapis.com/compute/v1/projects/database-security-445803/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.0.0/24",
              "10.1.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny-external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2025-01-02T09:50:15.501-08:00",
            "deny": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/database-security-445803/global/firewalls/deny-external",
            "log_config": [
              {
                "metadata": "EXCLUDE_ALL_METADATA"
              }
            ],
            "name": "deny-external",
            "network": "https://www.googleapis.com/compute/v1/projects/database-security-445803/global/networks/db-security-vpc",
            "priority": 1,
            "project": "database-security-445803",
            "self_link": "https://www.googleapis.com/compute/v1/projects/database-security-445803/global/firewalls/deny-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.159.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2024-12-26T12:40:11.300-08:00",
            "id": "projects/database-security-445803/global/addresses/private-range",
            "name": "private-range",
            "network": "https://www.googleapis.com/compute/v1/projects/database-security-445803/global/networks/db-security-vpc",
            "prefix_length": 16,
            "project": "database-security-445803",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/database-security-445803/global/addresses/private-range"
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/database-security-445803/global/networks/db-security-vpc",
            "mtu": 0,
            "name": "db-security-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "database-security-445803",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/database-security-445803/global/networks/db-security-vpc",
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-12-26T12:40:11.300-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/database-security-445803/regions/us-central1/subnetworks/db-security-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "db-security-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/database-security-445803/global/networks/db-security-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "database-security-445803",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.0.0/24",
                "range_name": "db-security-range"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/database-security-445803/regions/us-central1/subnetworks/db-security-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    }
  ]
}